correção: logo header / img home / color bnt contato

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem architecto molestiae corrupti eveniet sed corporis eligendi alias, totam amet vitae temporibus libero voluptatibus exercitationem nobis officiis odit animi doloribus expedita aspernatur placeat vero explicabo veritatis quidem nostrum. Accusantium quas vitae possimus. Consequuntur non quod eius harum magni et nihil eligendi omnis nostrum? Voluptates ipsa dicta modi ratione, harum itaque aperiam sequi est corrupti ab nemo odit?</p>
 
                     <div class="btn">
-                        <a href="src/download/CV/Currículo Dev Sérgio Toledo.pdf" download="">Dwonload CV</a>
+                        <a href="./src/download/CV/Currículo Dev Sérgio Toledo.pdf" download="">Dwonload CV</a>
                         <a href="#contato">Contato</a>
                     </div>
                 </div>
@@ -71,13 +71,13 @@
                 </div>
 
                 <div class="content">
-                    <img class="img-sobre" src="src/images/url2img_657ce07871638.jpeg" alt="">
+                    <img class="img-sobre" src="./src/images/url2img_657ce07871638.jpeg" alt="">
                     
                     <div class="box-right-sobre">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At sint aut fuga esse omnis nihil eos corrupti explicabo numquam quae labore recusandae corporis, placeat optio non eum in delectus amet ratione quod cupiditate! Harum sapiente vitae, sit impedit nisi id eum commodi ad possimus natus dolore facilis dolorum est consequuntur.</p>
 
                         <div class="btn btn-light">
-                            <a href="src/download/CV/Currículo Dev Sérgio Toledo.pdf" download="">Dwonload CV</a>
+                            <a href="./src/download/CV/Currículo Dev Sérgio Toledo.pdf" download="">Dwonload CV</a>
                             <a href="#contato">Contato</a>
                         </div>
 
@@ -113,7 +113,7 @@
                     <div class="box-left-skills">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio a animi quod error delectus illo nisi magnam nemo ut id eum, laboriosam atque est odit qui doloremque, enim ducimus laborum ipsum. Cupiditate, corrupti quis. Enim consectetur quis labore ex veritatis cum excepturi repellat unde officia alias minus, ab, dicta facilis?</p>
                         <div class="btn btn-light">
-                            <a href="src/download/CV/Currículo Dev Sérgio Toledo.pdf" download="">Dwonload CV</a>
+                            <a href="./src/download/CV/Currículo Dev Sérgio Toledo.pdf" download="">Dwonload CV</a>
                             <a href="#contato">Contato</a>
                         </div>
                     </div>
