animação com CSS: section - home / h1

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     <span>Olá,</span>
 
                     <div class="container-typing">
-                        <span>Eu sou um,</span>
-                        <h1 class="typing">TESTANDO</h1>
+                        <span>Eu sou um,&nbsp;</span>
+                        <h1 class="typing"></h1>
                     </div>
 
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem architecto molestiae corrupti eveniet sed corporis eligendi alias, totam amet vitae temporibus libero voluptatibus exercitationem nobis officiis odit animi doloribus expedita aspernatur placeat vero explicabo veritatis quidem nostrum. Accusantium quas vitae possimus. Consequuntur non quod eius harum magni et nihil eligendi omnis nostrum? Voluptates ipsa dicta modi ratione, harum itaque aperiam sequi est corrupti ab nemo odit?</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem architecto molestiae corrupti eveniet sed corporis eligendi alias, totam amet vitae temporibus libero voluptatibus exercitationem nobis officiis odit animi doloribus expedita aspernatur placeat vero explicabo veritatis quidem nostrum. Accusantium quas vitae possimus. Consequuntur non quod eius harum magni et nihil eligendi omnis nostrum?</p>
 
                     <div class="btn">
                         <a href="./src/download/CV/Currículo Dev Sérgio Toledo.pdf" download="">Dwonload CV</a>
@@ -183,7 +183,7 @@
 
                         <div class="email-zap">
                             <span><i class="fa-regular fa-envelope"></i>E-mail: srg.toledo@hotmail.com</span>
-                            <span><i class="fa-brands fa-whatsapp"></i>Whatsapp: (11) 91234-5678</span>
+                            <span><i class="fa-brands fa-whatsapp"></i>Whatsapp: <span>(11)</span> 91234-5678</span>
                         </div>
                         <div class="redes-sociais">
                             <p>Redes Sociais:</p>
